[gd_scene load_steps=13 format=3 uid="uid://bwwub6oudj27n"]

[ext_resource type="Script" path="res://Scenes/Components/monster_base.gd" id="1_551yx"]
[ext_resource type="PackedScene" uid="uid://cp4dtj0hqoh3x" path="res://Scenes/Components/movement_component.tscn" id="2_fok58"]
[ext_resource type="PackedScene" uid="uid://b30id1vnhmleh" path="res://Scenes/Components/health_component.tscn" id="3_m1u6b"]
[ext_resource type="Texture2D" uid="uid://dolftr2sliyls" path="res://Art Assets/Monsters/cake fork 1.png" id="4_b4d38"]
[ext_resource type="Texture2D" uid="uid://bveigehxsidn5" path="res://Art Assets/Monsters/cake fork 2.png" id="5_uhdki"]
[ext_resource type="Texture2D" uid="uid://bxk8wy7vln5y3" path="res://Art Assets/Monsters/cake knife 1.png" id="6_ukxrh"]
[ext_resource type="Texture2D" uid="uid://bd3uv511n1h4s" path="res://Art Assets/Monsters/cake knife 2.png" id="7_uaqt5"]
[ext_resource type="Texture2D" uid="uid://dvb8kscfdemsg" path="res://Art Assets/Monsters/cake sword 1.png" id="8_qf6tc"]
[ext_resource type="Texture2D" uid="uid://beowmytj4hxep" path="res://Art Assets/Monsters/cake sword 2.png" id="9_li2iv"]
[ext_resource type="PackedScene" uid="uid://cphsurogcqdcb" path="res://Scenes/Components/attack_component.tscn" id="10_ocs2t"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xfuja"]

[sub_resource type="SpriteFrames" id="SpriteFrames_qgmro"]
animations = [{
"frames": [{
"duration": 7.0,
"texture": ExtResource("4_b4d38")
}, {
"duration": 1.0,
"texture": ExtResource("5_uhdki")
}],
"loop": true,
"name": &"fork idle",
"speed": 12.0
}, {
"frames": [{
"duration": 5.0,
"texture": ExtResource("6_ukxrh")
}, {
"duration": 1.0,
"texture": ExtResource("7_uaqt5")
}],
"loop": true,
"name": &"knife idle",
"speed": 12.0
}, {
"frames": [{
"duration": 7.0,
"texture": ExtResource("8_qf6tc")
}, {
"duration": 1.0,
"texture": ExtResource("9_li2iv")
}],
"loop": true,
"name": &"sword idle",
"speed": 12.0
}]

[node name="CakeMonster" type="Node2D" groups=["monster"]]
script = ExtResource("1_551yx")
max_health = 110

[node name="MovementComponent" parent="." groups=["component"] instance=ExtResource("2_fok58")]
unique_name_in_owner = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_postprocessing = 1
avoidance_enabled = true
avoidance_mask = 0
debug_enabled = true

[node name="CakeSprites" type="AnimatedSprite2D" parent="."]
texture_filter = 3
material = SubResource("ShaderMaterial_xfuja")
position = Vector2(0, -64)
scale = Vector2(12, 12)
sprite_frames = SubResource("SpriteFrames_qgmro")
animation = &"knife idle"
autoplay = "knife idle"

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(256, 256)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -160.0
offset_right = 128.0
offset_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2

[node name="HealthComponent" parent="Control" instance=ExtResource("3_m1u6b")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -128.0
offset_top = -32.0
offset_right = 128.0
offset_bottom = 0.0
grow_horizontal = 2

[node name="Markers" type="Node2D" parent="."]

[node name="MarkerUp" type="Marker2D" parent="Markers"]
position = Vector2(0, -128)
rotation = -1.5708
gizmo_extents = 64.0

[node name="MarkerRight" type="Marker2D" parent="Markers"]
position = Vector2(128, 0)
gizmo_extents = 64.0

[node name="MarkerLeft" type="Marker2D" parent="Markers"]
position = Vector2(-128, 0)
rotation = 3.14159
gizmo_extents = 64.0

[node name="MarkerDown" type="Marker2D" parent="Markers"]
position = Vector2(0, 128)
rotation = 1.5708
gizmo_extents = 64.0

[node name="AttackComponent" parent="." instance=ExtResource("10_ocs2t")]

[connection signal="defeated" from="." to="." method="_on_defeat"]
[connection signal="defeated" from="." to="MovementComponent" method="_on_defeat"]
[connection signal="damage_collision" from="MovementComponent" to="." method="_on_damage_received"]
